# railfan

./: README.md
api/: .gitignore  README.md  pyproject.toml  test.db
api/src/api/: __init__.py  main.py
api/src/api/db/: Controller.py  StationController.py  UserController.py  __init__.py
api/src/api/db/models/: Leg.py  Operator.py  OsmNode.py  Station.py  StockClass.py  User.py  UserJourney.py  __init__.py
api/src/api/db/models/legs/: Leg.py  LegPartialWay.py  LegWay.py  __init__.py
api/src/api/db/models/operators/: __init__.py
api/src/api/db/models/routes/: Route.py  RouteLeg.py  RouteStation.py  __init__.py
api/src/api/db/models/stations/: StationNode.py  __init__.py
api/src/api/db/models/stock/: Stock.py  __init__.py
api/src/api/db/models/users/: User.py  __init__.py
api/src/api/routes/: StationRouter.py  UserRouter.py  __init__.py
api/src/api/testData/: __init__.py  format.py  loadTestData.py  testData.json  testDataSchema.json
client/: .cta.json  .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: main.tsx  reportWebVitals.ts
client/src/lib/: client.ts
client/src/routes/: __root.tsx  index.tsx
